option to show/hide genus, numerus etc.

--- a/Resources/de.lproj/prefs.xhtml
+++ b/Resources/de.lproj/prefs.xhtml
@@ -14,7 +14,8 @@
     <label><input type="radio" name="lang" value="1"/>Deutsch</label><br />
 </div>
 <div class="query">
-    <label><input type="checkbox" name="show_uid" value="yes"/>Zeige Online-Link</label><br />
+    <label><input type="checkbox" name="show_genera" value="yes"/>Genus-Anzeige</label><br />
+    <label><input type="checkbox" name="show_uid" value="yes"/>Online-Link</label><br />
 </div>
 </body>
 </html>
