--- a/Resources/Japanese.lproj/prefs.xhtml
+++ b/Resources/Japanese.lproj/prefs.xhtml
@@ -14,6 +14,7 @@
     <label><input type="radio" name="lang" value="1"/>ドイツ語</label><br />
 </div>
 <div class="query">
+    <label><input type="checkbox" name="show_genera" value="yes"/>名詞の性・数を表示</label><br />
     <label><input type="checkbox" name="show_uid" value="yes"/>オンライン版へのリンク表示</label><br />
 </div>
 </body>
