optional furigana for subentries

--- a/Resources/de.lproj/prefs.xhtml
+++ b/Resources/de.lproj/prefs.xhtml
@@ -15,6 +15,7 @@
 </div>
 <div class="query">
     <label><input type="checkbox" name="show_genera" value="yes"/>Genus-Anzeige</label><br />
+    <label><input type="checkbox" name="show_ruby" value="yes"/>Furigana-Anzeige</label><br />
     <label><input type="checkbox" name="show_uid" value="yes"/>Online-Link</label><br />
 </div>
 </body>
