--- a/Resources/Japanese.lproj/prefs.xhtml
+++ b/Resources/Japanese.lproj/prefs.xhtml
@@ -15,6 +15,7 @@
 </div>
 <div class="query">
     <label><input type="checkbox" name="show_genera" value="yes"/>名詞の性・数を表示</label><br />
+    <label><input type="checkbox" name="show_ruby" value="yes"/>ふりがな表示</label><br />
     <label><input type="checkbox" name="show_uid" value="yes"/>オンライン版へのリンク表示</label><br />
 </div>
 </body>
