prefs.xhtml: fix display language selection
* radiobutton names are not allowed to contain hyphen '-'
* radiobutton (or maybe all) input values must be numerical

--- a/OtherResources/de.lproj/prefs.xhtml
+++ b/OtherResources/de.lproj/prefs.xhtml
@@ -10,8 +10,8 @@
 </div>
 <div class="query">
     Anzeigesprache:<br />
-    <label><input type="radio" name="lang" value="ja"/>Japanisch</label><br />
-    <label><input type="radio" name="lang" value="de"/>Deutsch</label><br />
+    <label><input type="radio" name="displaylang" value="0"/>Japanisch</label><br />
+    <label><input type="radio" name="displaylang" value="1"/>Deutsch</label><br />
 </div>
 <div class="query">
     Anzeigeoptionen:
