--- a/OtherResources/ja.lproj/prefs.xhtml
+++ b/OtherResources/ja.lproj/prefs.xhtml
@@ -10,8 +10,8 @@
 </div>
 <div class="query">
     表示言語:<br />
-    <label><input type="radio" name="lang" value="ja"/>日本語</label><br />
-    <label><input type="radio" name="lang" value="de"/>ドイツ語</label><br />
+    <label><input type="radio" name="displaylang" value="0"/>日本語</label><br />
+    <label><input type="radio" name="displaylang" value="1"/>ドイツ語</label><br />
 </div>
 <div class="query">
     表示オプション:<br />
